force-app/main/default/objects/PassageiroVoo__c/PassageiroVoo__c.object-meta.xml
<CustomObject>
    <description>Armazena os passageiros de um voo</description>
    <label>Passageiro do Voo</label>
    <nameField>
        <displayFormat>PV-{00}</displayFormat>
        <label>Código do Passageiro do Voo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passageiros do Voo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>