force-app/main/default/objects/PassageiroVoo__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <description>Contato que será usado para criar um passageiro em um trecho</description>
    <inlineHelpText>Contato que será usado para criar um passageiro em um trecho</inlineHelpText>
    <label>Contato</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Passageiro não pode ser do tipo Contato, mas sim do tipo Passageiro ou Cliente - Pessoa Física</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Contato</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Passageiros do Voo</relationshipLabel>
    <relationshipName>PassageirosVoo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>