force-app/main/default/objects/PassageiroVoo__c/fields/ContatoEmergencia__c.field-meta.xml
<CustomField>
    <fullName>ContatoEmergencia__c</fullName>
    <label>Contato de Emergência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>