force-app/main/default/objects/PassageiroVoo__c/fields/TelefoneEmergencia__c.field-meta.xml
<CustomField>
    <fullName>TelefoneEmergencia__c</fullName>
    <label>Telefone do contato de emergencia</label>
    <type>Phone</type>
</CustomField>