force-app/main/default/objects/PassageiroVoo__c/fields/Voo__c.field-meta.xml
<CustomField>
    <fullName>Voo__c</fullName>
    <description>Voo ao qual o contato está vinculado e será registrado como passageiro</description>
    <inlineHelpText>Voo ao qual o contato está vinculado e será registrado como passageiro</inlineHelpText>
    <label>Voo</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>Passageiros do Voo</relationshipLabel>
    <relationshipName>PassageirosVoo</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>